Can now click buttons instead of scrolling with them and drawer arrow no longer overlaps footer-bar

--- a/src/client/stylesheets/components/_footer.scss
+++ b/src/client/stylesheets/components/_footer.scss
@@ -4,16 +4,9 @@
     bottom: 0;
     width: 100%;
 
-    .drawerbutton {
-        width: 100%;
-        position: absolute;
-        z-index: 100;
-        text-align: center;
-    }
-
     .footer-bar {
         position: relative;
-        height: 10vmin;
+        height: 13vmin;
         width: 100%;
         font-family: sans-serif;
         font-size: 8vmin;
@@ -28,14 +21,27 @@
         -webkit-user-select: none;
         -webkit-touch-callout: none;
 
-        .op-text {
+        .Footer-left {
+
             flex: 20;
             overflow-y: hidden;
+
+            .drawerbutton {
+                width: 100%;
+                position: relative;
+                text-align: center;
+                font-size: 12px;
+            }
+
+            .op-text {
+                overflow-y: hidden;
+            }
         }
 
         .footer-buttons {
             background: green;
             display: flex;
+            align-items: center;
 
             .button-icon {
                 flex: 1;
